@@ -14,10 +14,10 @@ BEGIN {
 		debug		      => { parse => 'boolean', default => 0, type => BOOLEAN},
 		cache		      => { parse => 'boolean', default => 0, type => BOOLEAN},
 		cornice       => { parse => 'boolean', default => 0, type => BOOLEAN},
-		frame_top     => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
-		frame_left    => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
-		frame_right   => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
-		frame_bottom  => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
+		frame_top_file     => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
+		frame_left_file    => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
+		frame_right_file   => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
+		frame_bottom_file  => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
 		base          => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
 		gids          => { parse => 'list',   type => ARRAYREF | UNDEF, default => qw/everybody/ },
 		login         => { parse => 'string',  type => SCALAR | UNDEF, default => undef },
